--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,9 +1,18 @@
-<h1 class="text-3xl text-red-500">{{ title }}</h1>
+<div class="card bg-base-100 w-1/2 mx-auto p-10 shadow-xl">
 
-<ul>
+<h3 class="text-3xl text-red-500">{{ title }}</h3>
+<ul class="list">
     @for (member of members(); track member.id) {
-        <li>{{ member.id }} - {{member.displayName}}</li>
+        <li class="list-row items-center">
+            <img src="/user.png" alt="user avatar" class="size-12 rounded-box">
+            <div>
+                {{member.displayName}}
+            </div>
+        </li>
     }
 </ul>
+</div>
 
-<button class="btn btn-primary">Primary</button>
+
+
+
