--- a/client/src/layout/nav/nav.html
+++ b/client/src/layout/nav/nav.html
@@ -1,4 +1,4 @@
-<header class="p-3 w-full fixed top-0 z-50 bg-gradient-to-r from-primary to-black">
+<header class="p-3 w-full fixed top-0 z-50 bg-linear-to-r from-primary to-black">
     <div class="flex align-middle items-center px-10 mx-auto gap-6">
         <a class="flex items-center gap-3 max-h-16 text-white border-r-white border-r-2 pr-6">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7">
@@ -15,12 +15,12 @@
         </nav>
 
         <div class="flex align-middle ml-auto gap-3">
-            @if (loggedIn()) {
+            @if (accountService.currentUser() ; as user) {
             <div class="dropdown dropdown-end">
                 <div tabindex="0" role="button" class="flex items-center text-white text-xl gap-3 cursor-pointer"> 
                     <img
                         src="/user.png" alt="user avatar" class="w-10 h-10 rounded-full">
-                    <span>Bob</span>
+                    <span>{{ user.displayName }}</span>
                 </div>
                 <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
                     <li><a>Edit profile</a></li>
